# uwufierpy

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
src/: lib.rs
src/uwufier/: __init__.py
test/test/: test_uwufier.py
uwufier/: __init__.pyi
