cargo-features = ["edition2021"]


[package]
name = "uwupy"
version = "0.1.0"
authors = ["Spenser Haddad <spenser.haddad@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uwuify = "^0.2.1"


[lib]
name = "uwufierpy"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
